# chartingWithTradeReview

./: README.md  pyproject.toml
src/charts/: __init__.py  __main__.py  cli.py  reports.py
src/charts/export/: __init__.py  csv_export.py  html_export.py
src/charts/models/: __init__.py  results.py  serialization.py  trade.py
src/charts/server/: __init__.py  app.py  data.py  firebase.py  handlers.py  state.py
src/charts/server/routes/: __init__.py  _template.py  api.py  firebase.py  pages.py  state.py  ws.py
src/charts/templates/: _drawing.css  _drawing.js  _indicators.js  _shared.css  app.html  market.html  trades.html
tests/: conftest.py  test_cli.py  test_data.py  test_export.py  test_fastapi_migration.py  test_models.py  test_reports.py  test_serialization.py  test_server.py  test_state.py
