[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charts"
version = "0.3.0"
description = "Interactive market data and trade review charts — TradingView Lightweight Charts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AI-ORB"}]

dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
marketdata = ["marketdata"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
charts = "charts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/charts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
