[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charts"
version = "0.5.0"
description = "Interactive market data, trade review, and performance report charts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AI-ORB"}]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
marketdata = ["marketdata"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
charts = "charts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/charts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
